2008-11-17  Neal H. Walfield  <neal@gnu.org>

	* as-lookup.c (DUMP_OR_RET) [NDEBUG]: Just return.
	(as_lookup_rel_internal) [NDEBUG]: Define dump_path to be false.

2008-11-12  Neal H. Walfield  <neal@gnu.org>

	* anonymous.h (struct anonymous_pager): Improve documentation for
	the fill_lock field.
	* anonymous.c (fault): Drop ANON->LOCK before calling the user's
	fill function.
	(destroy): Before destroying ANON, take ANON->FILL_LOCK.

	* madvise.c (madvise): Refactor to not hold map lock when calling
	MAP->PAGER->ADVISE.

2008-11-11  Neal H. Walfield  <neal@gnu.org>

	* madvise.c (madvise): Add debugging output for bad arguments.

2008-11-11  Neal H. Walfield  <neal@gnu.org>

	* anonymous.c: Include <profile.h>.
	(fault): Profile.

2008-11-06  Neal H. Walfield  <neal@gnu.org>

	* anonymous.c (fault): Handle the case where COUNT > 0.  Don't
	assume that storage has been allocated if INFO.DISCARDED is true.
	(advise): Interpret pager_advice_normal to mean to cleared
	discarded pages and to allocate unallocated pages.

2008-11-03  Neal H. Walfield  <neal@gnu.org>

	* headers.m4: Don't create an empty libhurd-mm/libhurd-mm.a.

2008-08-15  Neal H. Walfield  <neal@gnu.org>

	* storage.c (storage_free_): Deallocate the folio before updating
	the shadow capability.

2008-08-12  Neal H. Walfield  <neal@gnu.org>

	* storage.c (storage_low_mutex): Use
	PTHREAD_RECURSIVE_MUTEX_INITIALIZER_NP, not
	PTHREAD_MUTEX_RECURSIVE_INITIALIZER_NP.

2008-07-08  Neal H. Walfield  <neal@gnu.org>

	* as-lookup.c: Include <profile.h>, not "../viengoos/profile.h".

2008-07-04  Neal H. Walfield  <neal@gnu.org>

	* as-lookup.c: Don't include <pthread.h>.
	(as_rwlock): Don't define here.
	* as.c: Include <pthread.h>.
	(as_rwlock): Define.
	(as_rwlock_owner): Likewise.
	* as.h: Include <l4/types.h>.
	(as_lock): Check and set as_rwlock_owner appropriately.
	(as_lock_readonly): Likewise.
	(as_unlock): Likewise.
	* storage.c (do_serialize): New local variable.