@@ -1,3 +1,9 @@
+2008-11-18  Neal H. Walfield  <neal@gnu.org>
+
+	* anonymous.c (fault): Preallocate the pages surrounding a fault.
+	Only copy the capability in place if we just allocated the
+	storage.
+
 2008-11-17  Neal H. Walfield  <neal@gnu.org>
 
 	* as-lookup.c (DUMP_OR_RET) [NDEBUG]: Just return.
